# file-watcher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_and_push.yml  dependency-review.yml  formatting.yml  formatting_and_linting.yml  linting.yml  scorecard.yml  tests.yml  trivy.yml
container/: file_watcher.D  file_watcher_operator.D
file_watcher/: health.py  lastrun_file_monitor.py  main.py  utils.py
file_watcher/database/: db_updater.py
file_watcher_operator/: file_watcher_operator.py
test/file_watcher/: test_health.py  test_lastrun_file_monitor.py  test_main.py  utils.py
