[project]
name = "file-watcher"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "pika==1.3.2",
    "psycopg2==2.9.9",
    "SQLAlchemy==2.0.32",
]

[project.urls]
"Repository" = "https://github.com/fiaisis/file-watcher"

[project.scripts]
file_watcher = "file_watcher.main:main"

[project.optional-dependencies]
operator = [
    "kopf==1.37.2",
    "kubernetes==30.1.0",
    "PyYAML==6.0.2"
]

formatting = [
    "black==24.8.0"
]

test = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.24.0"
]

code-inspection = [
    "pylint==3.2.7",
    "mypy==1.11.2",
    "types-PyYAML==6.0.12.20240808",
    "file_watcher[test]",
    "file_watcher[operator]"
]

dev = [
    "file_watcher[code-inspection]"
]

[tool.setuptools]
packages = ["file_watcher"]
